# conda-which

./: .gitignore  README.md  conda_which.py  pyproject.toml  test.py
.github/workflows/: tests.yml
recipe/: meta.yaml
test-data/clobbered/conda-meta/: flask-1.0.0-pyhd8ed1ab_0.json  numpy-1.0.0-pyhd2dzjjafs.json
test-data/clobbered/lib/: clobbered
test-data/conda-meta/: decodable-1.0.0-pyhd8ed1ab_0.json
tests/: environment.yml  test.py
tests/data/conda-meta/: decodable-1.0.0-pyhd8ed1ab_0.json  notdecodable-1.0.0-pyhd9ed1ab.json
tests/data/environments/clobbered/conda-meta/: numpy-1.0.0-pyhd2dzjjafs.json
tests/data/environments/normal/: user-added.txt
tests/data/environments/normal/conda-meta/: flask-1.0.0-pyhd8ed1ab_0.json  numpy-1.0.0-pyhd2dzjddn.json
