[build-system]
requires = ["setuptools>=62", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-which"
version = "0.2.2"
description = "What package does this file belong to?"
requires-python = ">=3.8"
dependencies = [
    "conda >=23",
    "termcolor",
]

[project.entry-points.conda]
conda-which = "conda_which"

[project.scripts]
conda-which = "conda_which:main"

[tool.setuptools]
py-modules = ["conda_which"]
